Displaying basic info.

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -40,6 +40,279 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 165808 entries, 0 to 165807\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column            Non-Null Count   Dtype  \n",
+      "---  ------            --------------   -----  \n",
+      " 0   ACTOR1            165808 non-null  object \n",
+      " 1   ACTOR1_ID         140747 non-null  float64\n",
+      " 2   ACTOR2            122255 non-null  object \n",
+      " 3   ACTOR2_ID         140747 non-null  float64\n",
+      " 4   ACTOR_DYAD_ID     140747 non-null  object \n",
+      " 5   ADMIN1            165808 non-null  object \n",
+      " 6   ADMIN2            165676 non-null  object \n",
+      " 7   ADMIN3            86933 non-null   object \n",
+      " 8   ALLY_ACTOR_1      28144 non-null   object \n",
+      " 9   ALLY_ACTOR_2      19651 non-null   object \n",
+      " 10  COUNTRY           165808 non-null  object \n",
+      " 11  EVENT_DATE        165808 non-null  object \n",
+      " 12  EVENT_ID_CNTY     165808 non-null  object \n",
+      " 13  EVENT_ID_NO_CNTY  140747 non-null  float64\n",
+      " 14  EVENT_TYPE        165808 non-null  object \n",
+      " 15  FATALITIES        165808 non-null  int64  \n",
+      " 16  GEO_PRECISION     165808 non-null  int64  \n",
+      " 17  GWNO              165808 non-null  int64  \n",
+      " 18  INTER1            165808 non-null  int64  \n",
+      " 19  INTER2            165808 non-null  int64  \n",
+      " 20  INTERACTION       165808 non-null  int64  \n",
+      " 21  LATITUDE          165808 non-null  object \n",
+      " 22  LOCATION          165805 non-null  object \n",
+      " 23  LONGITUDE         165808 non-null  object \n",
+      " 24  NOTES             155581 non-null  object \n",
+      " 25  SOURCE            165635 non-null  object \n",
+      " 26  TIME_PRECISION    165808 non-null  int64  \n",
+      " 27  YEAR              165808 non-null  int64  \n",
+      "dtypes: float64(3), int64(8), object(17)\n",
+      "memory usage: 35.4+ MB\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ACTOR1</th>\n",
+       "      <th>ACTOR1_ID</th>\n",
+       "      <th>ACTOR2</th>\n",
+       "      <th>ACTOR2_ID</th>\n",
+       "      <th>ACTOR_DYAD_ID</th>\n",
+       "      <th>ADMIN1</th>\n",
+       "      <th>ADMIN2</th>\n",
+       "      <th>ADMIN3</th>\n",
+       "      <th>ALLY_ACTOR_1</th>\n",
+       "      <th>ALLY_ACTOR_2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>INTER1</th>\n",
+       "      <th>INTER2</th>\n",
+       "      <th>INTERACTION</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LOCATION</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "      <th>NOTES</th>\n",
+       "      <th>SOURCE</th>\n",
+       "      <th>TIME_PRECISION</th>\n",
+       "      <th>YEAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Police Forces of Algeria (1999-)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Civilians (Algeria)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tizi Ouzou</td>\n",
+       "      <td>Beni-Douala</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Berber Ethnic Group (Algeria)</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>36.61954</td>\n",
+       "      <td>Beni Douala</td>\n",
+       "      <td>4.08282</td>\n",
+       "      <td>A Berber student was shot while in police cust...</td>\n",
+       "      <td>Associated Press Online</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rioters (Algeria)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Police Forces of Algeria (1999-)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tizi Ouzou</td>\n",
+       "      <td>Tizi Ouzou</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Berber Ethnic Group (Algeria)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>36.71183</td>\n",
+       "      <td>Tizi Ouzou</td>\n",
+       "      <td>4.04591</td>\n",
+       "      <td>Riots were reported in numerous villages in Ka...</td>\n",
+       "      <td>Kabylie report</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Protesters (Algeria)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bejaia</td>\n",
+       "      <td>Amizour</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Students (Algeria)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>36.64022</td>\n",
+       "      <td>Amizour</td>\n",
+       "      <td>4.90131</td>\n",
+       "      <td>Students protested in the Amizour area. At lea...</td>\n",
+       "      <td>Crisis Group</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Rioters (Algeria)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Police Forces of Algeria (1999-)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bejaia</td>\n",
+       "      <td>Amizour</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Berber Ethnic Group (Algeria)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>36.64022</td>\n",
+       "      <td>Amizour</td>\n",
+       "      <td>4.90131</td>\n",
+       "      <td>Rioters threw molotov cocktails, rocks and bur...</td>\n",
+       "      <td>Kabylie report</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rioters (Algeria)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Police Forces of Algeria (1999-)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tizi Ouzou</td>\n",
+       "      <td>Beni-Douala</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Berber Ethnic Group (Algeria)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>36.61954</td>\n",
+       "      <td>Beni Douala</td>\n",
+       "      <td>4.08282</td>\n",
+       "      <td>Rioters threw molotov cocktails, rocks and bur...</td>\n",
+       "      <td>Kabylie report</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             ACTOR1  ACTOR1_ID  \\\n",
+       "0  Police Forces of Algeria (1999-)        NaN   \n",
+       "1                 Rioters (Algeria)        NaN   \n",
+       "2              Protesters (Algeria)        NaN   \n",
+       "3                 Rioters (Algeria)        NaN   \n",
+       "4                 Rioters (Algeria)        NaN   \n",
+       "\n",
+       "                             ACTOR2  ACTOR2_ID ACTOR_DYAD_ID      ADMIN1  \\\n",
+       "0               Civilians (Algeria)        NaN           NaN  Tizi Ouzou   \n",
+       "1  Police Forces of Algeria (1999-)        NaN           NaN  Tizi Ouzou   \n",
+       "2                               NaN        NaN           NaN      Bejaia   \n",
+       "3  Police Forces of Algeria (1999-)        NaN           NaN      Bejaia   \n",
+       "4  Police Forces of Algeria (1999-)        NaN           NaN  Tizi Ouzou   \n",
+       "\n",
+       "        ADMIN2 ADMIN3                   ALLY_ACTOR_1  \\\n",
+       "0  Beni-Douala    NaN                            NaN   \n",
+       "1   Tizi Ouzou    NaN  Berber Ethnic Group (Algeria)   \n",
+       "2      Amizour    NaN             Students (Algeria)   \n",
+       "3      Amizour    NaN  Berber Ethnic Group (Algeria)   \n",
+       "4  Beni-Douala    NaN  Berber Ethnic Group (Algeria)   \n",
+       "\n",
+       "                    ALLY_ACTOR_2  ... INTER1 INTER2 INTERACTION  LATITUDE  \\\n",
+       "0  Berber Ethnic Group (Algeria)  ...      1      7          17  36.61954   \n",
+       "1                            NaN  ...      5      1          15  36.71183   \n",
+       "2                            NaN  ...      6      0          60  36.64022   \n",
+       "3                            NaN  ...      5      1          15  36.64022   \n",
+       "4                            NaN  ...      5      1          15  36.61954   \n",
+       "\n",
+       "      LOCATION  LONGITUDE                                              NOTES  \\\n",
+       "0  Beni Douala    4.08282  A Berber student was shot while in police cust...   \n",
+       "1   Tizi Ouzou    4.04591  Riots were reported in numerous villages in Ka...   \n",
+       "2      Amizour    4.90131  Students protested in the Amizour area. At lea...   \n",
+       "3      Amizour    4.90131  Rioters threw molotov cocktails, rocks and bur...   \n",
+       "4  Beni Douala    4.08282  Rioters threw molotov cocktails, rocks and bur...   \n",
+       "\n",
+       "                    SOURCE  TIME_PRECISION  YEAR  \n",
+       "0  Associated Press Online               1  2001  \n",
+       "1           Kabylie report               1  2001  \n",
+       "2             Crisis Group               1  2001  \n",
+       "3           Kabylie report               1  2001  \n",
+       "4           Kabylie report               1  2001  \n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(df.info())\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
