--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -313,6 +313,246 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 165808 entries, 0 to 165807\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column            Non-Null Count   Dtype  \n",
+      "---  ------            --------------   -----  \n",
+      " 0   ACTOR1            165808 non-null  object \n",
+      " 1   ACTOR1_ID         140747 non-null  float64\n",
+      " 2   ACTOR2            122255 non-null  object \n",
+      " 3   ACTOR2_ID         140747 non-null  float64\n",
+      " 4   ACTOR_DYAD_ID     140747 non-null  object \n",
+      " 5   ADMIN1            165808 non-null  object \n",
+      " 6   ADMIN2            165676 non-null  object \n",
+      " 7   ADMIN3            86933 non-null   object \n",
+      " 8   ALLY_ACTOR_1      28144 non-null   object \n",
+      " 9   ALLY_ACTOR_2      19651 non-null   object \n",
+      " 10  COUNTRY           165808 non-null  object \n",
+      " 11  EVENT_DATE        165808 non-null  object \n",
+      " 12  EVENT_ID_CNTY     165808 non-null  object \n",
+      " 13  EVENT_ID_NO_CNTY  140747 non-null  float64\n",
+      " 14  EVENT_TYPE        165808 non-null  object \n",
+      " 15  FATALITIES        165808 non-null  int64  \n",
+      " 16  GEO_PRECISION     165808 non-null  int64  \n",
+      " 17  GWNO              165808 non-null  int64  \n",
+      " 18  INTER1            165808 non-null  int64  \n",
+      " 19  INTER2            165808 non-null  int64  \n",
+      " 20  INTERACTION       165808 non-null  int64  \n",
+      " 21  LATITUDE          165808 non-null  object \n",
+      " 22  LOCATION          165805 non-null  object \n",
+      " 23  LONGITUDE         165808 non-null  object \n",
+      " 24  NOTES             155581 non-null  object \n",
+      " 25  SOURCE            165635 non-null  object \n",
+      " 26  TIME_PRECISION    165808 non-null  int64  \n",
+      " 27  YEAR              165808 non-null  int64  \n",
+      "dtypes: float64(3), int64(8), object(17)\n",
+      "memory usage: 35.4+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ACTOR1_ID</th>\n",
+       "      <th>ACTOR2_ID</th>\n",
+       "      <th>EVENT_ID_NO_CNTY</th>\n",
+       "      <th>FATALITIES</th>\n",
+       "      <th>GEO_PRECISION</th>\n",
+       "      <th>GWNO</th>\n",
+       "      <th>INTER1</th>\n",
+       "      <th>INTER2</th>\n",
+       "      <th>INTERACTION</th>\n",
+       "      <th>TIME_PRECISION</th>\n",
+       "      <th>YEAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>140747.000000</td>\n",
+       "      <td>140747.000000</td>\n",
+       "      <td>140747.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2587.796692</td>\n",
+       "      <td>1211.638820</td>\n",
+       "      <td>70374.000000</td>\n",
+       "      <td>4.420257</td>\n",
+       "      <td>1.261061</td>\n",
+       "      <td>538.296964</td>\n",
+       "      <td>3.385500</td>\n",
+       "      <td>3.193603</td>\n",
+       "      <td>32.001604</td>\n",
+       "      <td>1.138751</td>\n",
+       "      <td>2010.760898</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1030.065824</td>\n",
+       "      <td>1242.978894</td>\n",
+       "      <td>40630.303506</td>\n",
+       "      <td>76.071441</td>\n",
+       "      <td>0.524248</td>\n",
+       "      <td>61.974200</td>\n",
+       "      <td>2.033114</td>\n",
+       "      <td>2.920635</td>\n",
+       "      <td>18.284381</td>\n",
+       "      <td>0.441038</td>\n",
+       "      <td>5.897476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>404.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1997.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2081.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>35187.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>490.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2007.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3043.000000</td>\n",
+       "      <td>675.000000</td>\n",
+       "      <td>70374.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>520.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2013.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>3288.000000</td>\n",
+       "      <td>2229.000000</td>\n",
+       "      <td>105560.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>615.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2016.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>3960.000000</td>\n",
+       "      <td>3960.000000</td>\n",
+       "      <td>140747.000000</td>\n",
+       "      <td>25000.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>651.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2017.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           ACTOR1_ID      ACTOR2_ID  EVENT_ID_NO_CNTY     FATALITIES  \\\n",
+       "count  140747.000000  140747.000000     140747.000000  165808.000000   \n",
+       "mean     2587.796692    1211.638820      70374.000000       4.420257   \n",
+       "std      1030.065824    1242.978894      40630.303506      76.071441   \n",
+       "min         1.000000       0.000000          1.000000       0.000000   \n",
+       "25%      2081.000000       0.000000      35187.500000       0.000000   \n",
+       "50%      3043.000000     675.000000      70374.000000       0.000000   \n",
+       "75%      3288.000000    2229.000000     105560.500000       1.000000   \n",
+       "max      3960.000000    3960.000000     140747.000000   25000.000000   \n",
+       "\n",
+       "       GEO_PRECISION           GWNO         INTER1         INTER2  \\\n",
+       "count  165808.000000  165808.000000  165808.000000  165808.000000   \n",
+       "mean        1.261061     538.296964       3.385500       3.193603   \n",
+       "std         0.524248      61.974200       2.033114       2.920635   \n",
+       "min         1.000000     404.000000       1.000000       0.000000   \n",
+       "25%         1.000000     490.000000       1.000000       0.000000   \n",
+       "50%         1.000000     520.000000       3.000000       2.000000   \n",
+       "75%         1.000000     615.000000       5.000000       7.000000   \n",
+       "max         3.000000     651.000000       8.000000       8.000000   \n",
+       "\n",
+       "         INTERACTION  TIME_PRECISION           YEAR  \n",
+       "count  165808.000000   165808.000000  165808.000000  \n",
+       "mean       32.001604        1.138751    2010.760898  \n",
+       "std        18.284381        0.441038       5.897476  \n",
+       "min        10.000000        1.000000    1997.000000  \n",
+       "25%        15.000000        1.000000    2007.000000  \n",
+       "50%        28.000000        1.000000    2013.000000  \n",
+       "75%        47.000000        1.000000    2016.000000  \n",
+       "max        88.000000        3.000000    2017.000000  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.info()  # Check column names, data types, and missing values\n",
+    "df.head()  # Display the first few rows\n",
+    "df.describe()  # Summary statistics for numerical columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
