Checking for missing values

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -553,6 +553,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACTOR1_ID            25061\n",
+      "ACTOR2               43553\n",
+      "ACTOR2_ID            25061\n",
+      "ACTOR_DYAD_ID        25061\n",
+      "ADMIN2                 132\n",
+      "ADMIN3               78875\n",
+      "ALLY_ACTOR_1        137664\n",
+      "ALLY_ACTOR_2        146157\n",
+      "EVENT_ID_NO_CNTY     25061\n",
+      "LOCATION                 3\n",
+      "NOTES                10227\n",
+      "SOURCE                 173\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_values = df.isnull().sum()\n",
+    "print(missing_values[missing_values > 0])  # Show only columns with missing values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
