--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -553,25 +553,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ACTOR1_ID            25061\n",
-      "ACTOR2               43553\n",
-      "ACTOR2_ID            25061\n",
-      "ACTOR_DYAD_ID        25061\n",
-      "ADMIN2                 132\n",
-      "ADMIN3               78875\n",
-      "ALLY_ACTOR_1        137664\n",
-      "ALLY_ACTOR_2        146157\n",
-      "EVENT_ID_NO_CNTY     25061\n",
-      "LOCATION                 3\n",
-      "NOTES                10227\n",
-      "SOURCE                 173\n",
+      "ACTOR1_ID           25061\n",
+      "ACTOR2              43553\n",
+      "ACTOR2_ID           25061\n",
+      "ACTOR_DYAD_ID       25061\n",
+      "ADMIN2                132\n",
+      "ADMIN3              78875\n",
+      "EVENT_ID_NO_CNTY    25061\n",
+      "LOCATION                3\n",
+      "NOTES               10227\n",
+      "SOURCE                173\n",
       "dtype: int64\n"
      ]
     }
@@ -579,6 +577,104 @@
    "source": [
     "missing_values = df.isnull().sum()\n",
     "print(missing_values[missing_values > 0])  # Show only columns with missing values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['ACTOR1', 'ACTOR1_ID', 'ACTOR2', 'ACTOR2_ID', 'ACTOR_DYAD_ID', 'ADMIN1',\n",
+      "       'ADMIN2', 'COUNTRY', 'EVENT_DATE', 'EVENT_ID_CNTY', 'EVENT_ID_NO_CNTY',\n",
+      "       'EVENT_TYPE', 'FATALITIES', 'GEO_PRECISION', 'GWNO', 'INTER1', 'INTER2',\n",
+      "       'INTERACTION', 'LATITUDE', 'LOCATION', 'LONGITUDE', 'NOTES', 'SOURCE',\n",
+      "       'TIME_PRECISION', 'YEAR'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checking column names\n",
+    "print(df.columns)\n",
+    "#this is to check for spaces in the columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = df.columns.str.strip()  # Remove leading/trailing spaces\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Drop existing values \n",
+    "df.drop(columns=['ALLY_ACTOR_1', 'ALLY_ACTOR_2', 'ADMIN3'], inplace=True, errors='ignore')\n",
+    "#Use errors='ignore' to prevent the KeyError:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Making sure column exists before dropping \n",
+    "columns_to_drop = ['ALLY_ACTOR_1', 'ALLY_ACTOR_2', 'ADMIN3']\n",
+    "existing_columns = [col for col in columns_to_drop if col in df.columns]\n",
+    "df.drop(columns=existing_columns, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACTOR1                  0\n",
+      "ACTOR1_ID           25061\n",
+      "ACTOR2              43553\n",
+      "ACTOR2_ID           25061\n",
+      "ACTOR_DYAD_ID       25061\n",
+      "ADMIN1                  0\n",
+      "ADMIN2                132\n",
+      "COUNTRY                 0\n",
+      "EVENT_DATE              0\n",
+      "EVENT_ID_CNTY           0\n",
+      "EVENT_ID_NO_CNTY    25061\n",
+      "EVENT_TYPE              0\n",
+      "FATALITIES              0\n",
+      "GEO_PRECISION           0\n",
+      "GWNO                    0\n",
+      "INTER1                  0\n",
+      "INTER2                  0\n",
+      "INTERACTION             0\n",
+      "LATITUDE                0\n",
+      "LOCATION                3\n",
+      "LONGITUDE               0\n",
+      "NOTES               10227\n",
+      "SOURCE                173\n",
+      "TIME_PRECISION          0\n",
+      "YEAR                    0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.isnull().sum())  # Ensure missing data is handled properly\n"
    ]
   },
   {
