Verification for all missing values

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -679,6 +679,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Drop EVENT_ID_NO_CNTY, ACTOR1_ID, ACTOR2_ID, and ACTOR_DYAD_ID\n",
+    "df.drop(columns=['EVENT_ID_NO_CNTY', 'ACTOR1_ID', 'ACTOR2_ID', 'ACTOR_DYAD_ID'], inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_58675/3029073581.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df['ACTOR2'].fillna('Unknown', inplace=True)\n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_58675/3029073581.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df['ADMIN2'].fillna('Unknown', inplace=True)\n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_58675/3029073581.py:5: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df['LOCATION'].fillna('Unknown', inplace=True)\n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_58675/3029073581.py:6: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df['SOURCE'].fillna('Unknown', inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Fill Missing Values in Categorical Columns\n",
+    "#filling missing values with 'unknowkn' for categorical features where missing values might just mean \"not reported.\"\n",
+    "df['ACTOR2'].fillna('Unknown', inplace=True)\n",
+    "df['ADMIN2'].fillna('Unknown', inplace=True)\n",
+    "df['LOCATION'].fillna('Unknown', inplace=True)\n",
+    "df['SOURCE'].fillna('Unknown', inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_58675/3772339072.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df['NOTES'].fillna('No information available', inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Fill Missing Values in NOTES Column\n",
+    "#Since NOTES contains text descriptions of events, a reasonable approach is to replace missing values with \"No information available\" rather than dropping the column.\n",
+    "df['NOTES'].fillna('No information available', inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACTOR1            0\n",
+      "ACTOR2            0\n",
+      "ADMIN1            0\n",
+      "ADMIN2            0\n",
+      "COUNTRY           0\n",
+      "EVENT_DATE        0\n",
+      "EVENT_ID_CNTY     0\n",
+      "EVENT_TYPE        0\n",
+      "FATALITIES        0\n",
+      "GEO_PRECISION     0\n",
+      "GWNO              0\n",
+      "INTER1            0\n",
+      "INTER2            0\n",
+      "INTERACTION       0\n",
+      "LATITUDE          0\n",
+      "LOCATION          0\n",
+      "LONGITUDE         0\n",
+      "NOTES             0\n",
+      "SOURCE            0\n",
+      "TIME_PRECISION    0\n",
+      "YEAR              0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#verifying that all missing values are handled \n",
+    "print(df.isnull().sum())  # This should now show all zeros!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
